# NPD_final

NPD_final/: pyproject.toml
NPD_final/Analysis/: Compute_stats.py  data_loading.py
Perform_analysis/: Oficjalny_Spis_Pocztowych_Numerw_Adresowych_2024.xlsx  Perform_analysis.py  tabela11.xls
