[build-system]
requires = ["hatchling >= 1.26"]
build-backend = "hatchling.build"

[project]
name = "NPD_final_468857"
version = "0.0.1"
authors = [
  { name="Dominika Pruszkowska", email="a.pruszkowski@students.uw.edu.pl" },
]
description = "NPD final project"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/d-pruszk/NPD_final"
#Issues = "https://github.com/pypa/sampleproject/issues"